<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>cz.cuni.mff</groupId>
    <artifactId>constr-solver</artifactId>
    <version>0.1</version>

    <properties>
        <maven.compiler.source>1.11</maven.compiler.source>
        <maven.compiler.target>1.11</maven.compiler.target>
    </properties>

    <build>
        <sourceDirectory>src</sourceDirectory>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>
    </dependencies>
</project>
